# DIArize_POO_Brachetti_Diaz_Lopardo

./: .gitignore  Abrir_DIArize.bat  Abrir_Transcriptor.bat  Iniciar_Servidor.bat
.claude/: settings.json
Transcriptor/: .env.example  .gitignore  README.md  cli.py  launcher.py  main.py  main_gui.py  requirements.txt  servidor.py
Transcriptor/gui/: __init__.py  ventana_principal.py  worker.py
Transcriptor/src/: __init__.py  alineador.py  asistente_ia.py  diarizador.py  formateador.py  grabador.py  pipeline.py  pipeline_assemblyai.py  transcriptor.py
TranscriptorCpp/: CMakeLists.txt  README.md  asistenteia.cpp  asistenteia.h  main.cpp  motortranscripcion.cpp  motortranscripcion.h  ventanaprincipal.cpp  ventanaprincipal.h
cliente_cpp/: CMakeLists.txt  CMakePresets.json
cliente_cpp/app/: CMakeLists.txt
cliente_cpp/app/include/gui/: PanelBase.h  PanelEnVivo.h  PanelHistorial.h  PanelTranscripcion.h  PantallaCarga.h  VentanaPrincipal.h
cliente_cpp/app/include/red/: ClienteHTTP.h  ClienteStreaming.h  ClienteTranscriptor.h
cliente_cpp/app/resources/: recursos.qrc
cliente_cpp/app/src/: main.cpp
cliente_cpp/app/src/gui/: PanelBase.cpp  PanelEnVivo.cpp  PanelHistorial.cpp  PanelTranscripcion.cpp  PantallaCarga.cpp  VentanaPrincipal.cpp
cliente_cpp/app/src/red/: ClienteHTTP.cpp  ClienteStreaming.cpp  ClienteTranscriptor.cpp
cliente_cpp/nucleo/: CMakeLists.txt
cliente_cpp/nucleo/include/nucleo/: Hablante.h  IObservador.h  ITranscriptor.h  Repositorio.h  Segmento.h  Transcripcion.h  version.h
cliente_cpp/nucleo/src/: Hablante.cpp  Segmento.cpp  Transcripcion.cpp
